# sparv-sbx-pi-detection

./: README.md  pyproject.toml
sbx_pi_detection/: __init__.py  metadata.yaml  pi_detection.py
sbx_pi_detection/testkorpus/: config.yaml
sbx_pi_detection/testkorpus/source/: essay1.txt  essay2.txt
